Update ssh config

--- a/.ssh/config
+++ b/.ssh/config
@@ -14,6 +14,12 @@ Host uberspace-s42
     HostName brooks.uberspace.de
     User s42    
 
+Host ns1.s42.space
+    User root
+
+Host ns2.s42.space
+    User root
+
 Host nas
     User pierewoehl
 
